--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,23 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t dkawanam/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run stephengrider/react-test npm test -- --coverage
+  - docker run dkawanam/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t stephengrider/multi-client ./client
-  - docker build -t stephengrider/multi-nginx ./nginx
-  - docker build -t stephengrider/multi-server ./server
-  - docker build -t stephengrider/multi-worker ./worker
+  - docker build -t dkawanam/multi-client ./client
+  - docker build -t dkawanam/multi-nginx ./nginx
+  - docker build -t dkawanam/multi-server ./server
+  - docker build -t dkawanam/multi-worker ./worker
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker push stephengrider/multi-client
-  - docker push stephengrider/multi-nginx
-  - docker push stephengrider/multi-server
-  - docker push stephengrider/multi-worker
+  - docker push dkawanam/multi-client
+  - docker push dkawanam/multi-nginx
+  - docker push dkawanam/multi-server
+  - docker push sdkawanam/multi-worker
 
 deploy:
   provider: elasticbeanstalk
