--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ deploy:
   app: multi-docker
   env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-2-884871223445
+  s3_endpoint: s3.us-east-2.amazonaws.com
   bucket_path: docker-multi
   on:
     branch: master
