--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,10 @@ notifications:
 
 deploy:
   provider: elasticbeanstalk
-  region: us-west-2
+  region: us-east-2
   app: multi-docker
   env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-2-884871223445
-  s3_endpoint: s3.us-east-2.amazonaws.com
   bucket_path: docker-multi
   on:
     branch: master
