--- a/k8s/.travis.yml
+++ b/k8s/.travis.yml
@@ -1,9 +1,28 @@
 sudo: required
 services:
   - docker
+env:
+  global:
+    - SHA=$(git rev-parse HEAD)
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_98622070467e_key -iv $encrypted_98622070467e_iv -in service-account.json.enc -out service-account.json -d
   - curl htps://sdk.cloud.google.com | bash > /dev/nul;
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl
-  - gcloud auth activate-service-account -key-file service-account.json
+  - gcloud auth activate-service-account --key-file service-account.json
+  - gcloud config set project cultivated-cove-250902
+  - gcloud config set compute/zone us-central1-a
+  - gcloud container clusters get-credentials multi-cluster
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker build -t urdavid/react-test -f./client/Dockerfile.dev ./client
+
+script:
+  - docker run urdavid/react-test npm test -- --coverage
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
