--- a/k8s/.travis.yml
+++ b/k8s/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - docker build -t urdavid/react-test -f./client/Dockerfile.dev ./client
 
 script:
-  - docker run urdavid/react-test npm test -- --coverage
+  - docker run -e CI=true urdavid/react-test npm test
 
 deploy:
   provider: script
