--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,19 @@ sudo: required
 services:
 - docker
 before_install:
-- docker build -t dkawanam/react-test -f ./client/Dockerfile.dev ./client
+- docker build -t urdavid/react-test -f ./client/Dockerfile.dev ./client
 script:
-- docker run dkawanam/react-test npm test -- --coverage
+- docker run urdavid/react-test npm test -- --coverage
 after_success:
-- docker build -t dkawanam/multi-client ./client
-- docker build -t dkawanam/multi-nginx ./nginx
-- docker build -t dkawanam/multi-server ./server
-- docker build -t dkawanam/multi-worker ./worker
+- docker build -t urdavid/multi-client ./client
+- docker build -t urdavid/multi-nginx ./nginx
+- docker build -t urdavid/multi-server ./server
+- docker build -t urdavid/multi-worker ./worker
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-- docker push dkawanam/multi-client
-- docker push dkawanam/multi-nginx
-- docker push dkawanam/multi-server
-- docker push dkawanam/multi-worker
+- docker push urdavid/multi-client
+- docker push urdavid/multi-nginx
+- docker push urdavid/multi-server
+- docker push urdavid/multi-worker
 
 notifications:
   slack:
